adding pooler, redis integration and refactoring routes

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 SSL_KEY_PATH="/opt/your-cert.com.key"
 SSL_CERT_PATH="/opt/your-cert.com.crt"
 
+
+REDIS_SERVER="localhost"
+
 THRESHOLD_EXPIRE="600"
 THRESHOLD_WARNING="3"
-THREDHOLD_POSSIBLE_DDOS="5"
+THREDHOLD_CRITICAL="5"
 
 INFOBLOX_HOSTNAME="ddi.yourdomain.com"
 INFOBLOX_USER="api-rw-username"
