adding notifications to garbage collector

--- a/.env.example
+++ b/.env.example
@@ -2,19 +2,15 @@ SSL_KEY_PATH="/opt/your-cert.com.key"
 SSL_CERT_PATH="/opt/your-cert.com.crt"
 
 
-REDIS_SERVER="localhost"
+NETHEALER_SERVER="nethealer.yourdomain.com"
+NETHEALER_INFLUXDB="influxdb.yourdomain.com"
+NETHEALER_USERNAME=""
+NETHEALER_PASSWORD=""
 
 THRESHOLD_EXPIRE="600"
 THRESHOLD_WARNING="3"
 THREDHOLD_CRITICAL="5"
 
-INFOBLOX_HOSTNAME="ddi.yourdomain.com"
-INFOBLOX_USER="api-rw-username"
-INFOBLOX_PASSWORD="123456"
-
-JIRA_HOSTNAME="yourdomain.atlassian.net/rest/api/latest"
-JIRA_USER="jira_username"
-JIRA_PASSWORD="123456"
-
-FLOWDOCK_OPS="API TOKEN"
-FLOWDOCK_NETOPS="API TOKEN"
+NOTIFICATION_EMAIL_SMTP="mail.yourdomain.com"
+NOTIFICATION_EMAIL_FROM="healer@yourdomain.com"
+NOTIFICATION_EMAIL_TO="your@email.com"
