add pagerduty notification support / fix minor issues

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
 SSL_KEY_PATH="/opt/your-cert.com.key"
 SSL_CERT_PATH="/opt/your-cert.com.crt"
 
-
 NETHEALER_SERVER="nethealer.yourdomain.com"
 NETHEALER_INFLUXDB="influxdb.yourdomain.com"
-NETHEALER_USERNAME=""
-NETHEALER_PASSWORD=""
+NETHEALER_USERNAME="influxdb username (r/w)"
+NETHEALER_PASSWORD="influxdb password"
 
 THRESHOLD_EXPIRE="600"
 THRESHOLD_WARNING="3"
@@ -14,3 +13,6 @@ THREDHOLD_CRITICAL="5"
 NOTIFICATION_EMAIL_SMTP="mail.yourdomain.com"
 NOTIFICATION_EMAIL_FROM="healer@yourdomain.com"
 NOTIFICATION_EMAIL_TO="your@email.com"
+
+#optional
+#NOTIFICATION_PAGERDUTY_KEY=""
