fix minor issue

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ THREDHOLD_CRITICAL="5"
 NOTIFICATION_EMAIL_SMTP="mail.yourdomain.com"
 NOTIFICATION_EMAIL_FROM="healer@yourdomain.com"
 NOTIFICATION_EMAIL_TO="your@email.com"
+NOTIFICATION_LOCATION="SFO"
 
 #optional
 #NOTIFICATION_PAGERDUTY_KEY=""
