improving flowdock plugin -- decoupling influxdb_vertical_markdown

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ NETHEALER_INFLUXDB="influxdb.yourdomain.com"
 NETHEALER_USERNAME="influxdb username (r/w)"
 NETHEALER_PASSWORD="influxdb password"
 
+GRAFANA_URL="https://grafana_server:port"
+
 THRESHOLD_EXPIRE="600"
 THRESHOLD_WARNING="3"
 THREDHOLD_CRITICAL="5"
