improving flowdock / pagerduty plugins

--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,16 @@ NETHEALER_PASSWORD="influxdb password"
 
 GRAFANA_URL="https://grafana_server:port"
 
-THRESHOLD_EXPIRE="600"
-THRESHOLD_WARNING="3"
-THREDHOLD_CRITICAL="5"
+THRESHOLD_EXPIRE="450"
+THRESHOLD_WARNING="2"
+THREDHOLD_CRITICAL="3"
 
 NOTIFICATION_EMAIL_SMTP="mail.yourdomain.com"
 NOTIFICATION_EMAIL_FROM="healer@yourdomain.com"
 NOTIFICATION_EMAIL_TO="your@email.com"
 NOTIFICATION_LOCATION="SFO"
 
-#optional
-#NOTIFICATION_PAGERDUTY_KEY=""
+#OPTIONAL PLUGINS
+
+#PAGERDUTY_KEY=""
+#FLOWDOCK_TOKENS="allow,multiple,flows,separated,by,comma"
